# AI-EMPLOYEE

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  README.md  TWITTER_API_STATUS.md  docker-compose.yml  get_token.py
Drop_Zone/: yo.md  (+2 more)
ai_employee_scripts/: .env.cloud.example  .env.example  README.md  ecosystem.cloud.config.js  ecosystem.local.config.js  main.py  orchestrator.py  pyproject.toml  refresh_gmail_mcp_token.py  setup_cron.sh  setup_linkedin.py  vault_sync.py  watchdog.py
ai_employee_scripts/cloud/: __init__.py  api_server.py  cloud_orchestrator.py  test_cloud_agent.py
ai_employee_scripts/cloud/agent_definitions/: __init__.py  base_agent.py  email_agent.py  finance_agent.py  models.py  social_agent.py  triage_agent.py
ai_employee_scripts/cloud/config/: __init__.py  settings.py
ai_employee_scripts/cloud/guardrails/: __init__.py  input_guardrails.py  output_guardrails.py
ai_employee_scripts/cloud/tools/: __init__.py  file_tools.py  git_tools.py  vault_tools.py
ai_employee_scripts/cloud_data/: processed_emails.db
ai_employee_scripts/cloud_watchers/: gmail_watcher.py  linkedin_watcher.py
ai_employee_scripts/mcp_servers/: __init__.py  gmail_mcp.py  linkedin_api_mcp.py  linkedin_mcp.py  odoo_mcp.py
ai_employee_scripts/scripts/: meta_cron_trigger.py  twitter_cron_trigger.py  weekly_audit_cron_trigger.py
ai_employee_scripts/shared/: __init__.py  dedup_client.py  error_handler.py  retry_handler.py
ai_employee_scripts/watchers/: base_watcher.py  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py  requirements.txt  save_linkedin_session.py
(+909 files in other folders)
